# Constexpr-Ray-Tracer

./: CMakeLists.txt  README.md  main.py  ray_tracing.py
include/: blas.hpp  camera.hpp  common.hpp  csg.hpp  geom.hpp  geometry.hpp  graphics.hpp  math.hpp  random.hpp  ray.hpp  reflection.hpp  rendering.hpp  sphere.hpp  traits.hpp  vector.hpp  vision.hpp
include/blas/: common.hpp  matrix.hpp  tensor.hpp  vector.hpp
include/camera/: camera.hpp  ray.hpp
include/common/: algorithm.hpp  functional.hpp  iostream.hpp  type_traits.hpp
include/geom/: csg.hpp  sphere.hpp
include/geometry/: csg.hpp  geometry.hpp  sphere.hpp
include/graphics/: ray_casting.hpp  ray_marching.hpp
include/image/: ppm.hpp
include/math/: operations.hpp  ops.hpp
include/random/: distributions.hpp  generators.hpp  utilities.hpp
include/reflection/: dielectric.hpp  lambertian.hpp  material.hpp  metal.hpp  utilities.hpp
include/rendering/: ray_casting.hpp  ray_marching.hpp  ray_tracing.hpp
include/tensor/: matrix.hpp  tensor.hpp
include/vision/: camera.hpp  ray.hpp
src/: main.cpp  main.hpp  scene.hpp
tools/: instantiate.py
tools/separen/: .CMakeLists.txt  instantiate.py
tools/separen/src/: main.hpp
